...
                          key: Key('settings_page_ElevatedButton'),
                          onPressed: () {},
                          style: ElevatedButton.styleFrom(
                            backgroundColor: Colors.amber,
                            foregroundColor: Colors.white,
                          ),
                          child: Text('ElevatedButton'),
                        ),
                      ),
                      FilledButton(
                        key: Key('settings_page_FilledButton'),
                        onPressed: () {
                          showDialog(
...
                        key: Key('settings_page_OutlinedButton'),
                        onPressed: () {},
                        child: Text('OutlinedButton'),
                      ),
                      HeroWidget(),
                      CloseButton(),
                      BackButton(key: Key('setting_page_backbutton')),
                    ],
                  ),
                ),
              ),
            ),
          ],
...
